sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: reassignment to val
      i=i+1
       ^AlgGnomeSort:8: error: reassignment to val
      i=i-1
       ^AlgGnomeSort:9: error: reassignment to val
      if (i<0) i=i+1
                ^